<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:theme="@style/MyCoolStyle"
    android:gravity="center"
    android:background="@drawable/fon">


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical"
        android:gravity="center"
       >

            <EditText
                android:id="@+id/textCalculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/calculator"
                android:text="@string/descriptionLanguage"
                android:textStyle="bold"
                android:gravity="center"
                />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_1"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_1"
                android:textSize="@dimen/textCounter" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_2"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_3"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_4"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_5"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_6"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_6"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_8"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_9"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/counter_0"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/counter_plus"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_minus"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_umnogenie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_umnogenie"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_umnogenie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_delenie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_delenie"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_delenie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ravno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_ravno"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_ravno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_zp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/counter_zp"
                android:textSize="@dimen/button_text" />
            <TextView
                android:id="@+id/textView_zp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="@dimen/textCounter" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:srcCompat="@drawable/pat"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_blue"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="Синяя"
            android:textSize="@dimen/button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="Красный"
            android:textSize="@dimen/button_text" />

    </LinearLayout>
</LinearLayout>
</LinearLayout>